--- a/app/views/page/colection/_colection2.html.erb
+++ b/app/views/page/colection/_colection2.html.erb
@@ -18,7 +18,7 @@
                   <div class="ov3"></div>
                   <div class="ov4"></div>
                   <a href="#">
-                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613745846/base/colection4-3_vyucvy.png">
+                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613825792/base/product-image-879683448_1024x1024_2x_ijvtro.jpg">
                   </a>
                 </div>
             </div>
@@ -29,7 +29,7 @@
                   <div class="ov3"></div>
                   <div class="ov4"></div>
                   <a href="#">
-                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613745846/base/colection4-3_vyucvy.png">
+                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613826246/base/product-image-1009069702_1024x1024_2x_uidrdp.jpg">
                   </a>
                 </div>
             </div>
@@ -40,7 +40,7 @@
                   <div class="ov3"></div>
                   <div class="ov4"></div>
                   <a href="#">
-                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613745846/base/colection4-3_vyucvy.png">
+                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613826152/base/DeepinScreenshot_select-area_20210216013956_1024x1024_2x_ldoxyc.png">
                   </a>
                 </div>
             </div>
