--- a/app/views/page/container/_carousel_product.html.erb
+++ b/app/views/page/container/_carousel_product.html.erb
@@ -1,10 +1,11 @@
 <!-- carousel product -->
+<!--732x1024-->
 <section id="engo-3" class="engo-box">
   <div class="carousel-product">
     <div class="container">
       <div class="box-title">
         <h3 class="h3-title">
-          SẢN PHẨM HOT
+          DRAGON BALL
         </h3>
         <div class="title-icon">
           <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613744678/base/title-icon_bobfez.png" alt="">
@@ -20,8 +21,8 @@
               <div class="product-item">
                 <div class="product-img">
                   <a href="#" class="image-hover">
-                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613744751/base/1-2_g91l1n.png" alt="" class="product-image-photo">
-                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613744751/base/1-2_g91l1n.png" alt="" class="product-image-photo image-catalog-hover">
+                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,h_1024,w_732/v1613826901/colection/9f1278156bf84db585a95c5b7b7768f5_Large_cqs3g6.jpg" alt="" class="product-image-photo">
+                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,h_1024,w_732/v1613826901/colection/9f1278156bf84db585a95c5b7b7768f5_Large_cqs3g6.jpg" alt="" class="product-image-photo image-catalog-hover">
                   </a>
                 </div>
                 <div class="product-info">
@@ -36,12 +37,12 @@
                   </div>
                   <div class="product-name">
                     <a href="#" class="product-item-link">
-                      Legging Cathedral
+                      Songoku
                     </a>
                   </div>
                   <div class="price-box price-final_price">
                                           <span class="price">
-                                             $ 35.00
+                                             vnd 200.000
                                           </span>
                   </div>
                   <!-- actions -->
@@ -69,8 +70,8 @@
               <div class="product-item">
                 <div class="product-img">
                   <a href="#" class="image-hover">
-                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613744751/base/1-2_g91l1n.png" alt="" class="product-image-photo">
-                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613744751/base/1-2_g91l1n.png" alt="" class="product-image-photo">
+                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,h_1024,w_732/v1613826899/colection/dragon-ball-super-ichibansho-pvc-figure-son-goku-ultra-instinct-ultimate-variation_cayeq9.jpg" alt="" class="product-image-photo">
+                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,h_1024,w_732/v1613826899/colection/dragon-ball-super-ichibansho-pvc-figure-son-goku-ultra-instinct-ultimate-variation_cayeq9.jpg" alt="" class="product-image-photo">
                   </a>
                 </div>
                 <div class="product-info">
@@ -85,12 +86,12 @@
                   </div>
                   <div class="product-name">
                     <a href="#" class="product-item-link">
-                      Legging Cathedral
+                      Songoku
                     </a>
                   </div>
                   <div class="price-box price-final_price">
                                           <span class="price">
-                                             $ 35.00
+                                             vnd 200.000
                                           </span>
                   </div>
                 </div>
@@ -102,8 +103,8 @@
               <div class="product-item">
                 <div class="product-img">
                   <a href="#" class="image-hover">
-                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613744751/base/1-2_g91l1n.png" alt="" class="product-image-photo">
-                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613744751/base/1-2_g91l1n.png" alt="" class="product-image-photo">
+                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_1024,w_732/v1613828071/colection/41WX6HxMu4L_uzwylj.jpg" alt="" class="product-image-photo">
+                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_1024,w_732/v1613828071/colection/41WX6HxMu4L_uzwylj.jpg" alt="" class="product-image-photo">
                   </a>
                 </div>
                 <div class="product-info">
@@ -118,12 +119,12 @@
                   </div>
                   <div class="product-name">
                     <a href="#" class="product-item-link">
-                      Legging Cathedral
+                      Songoku
                     </a>
                   </div>
                   <div class="price-box price-final_price">
                                           <span class="price">
-                                             $ 35.00
+                                             vnd 200.000
                                           </span>
                   </div>
                 </div>
@@ -135,8 +136,8 @@
               <div class="product-item">
                 <div class="product-img">
                   <a href="#" class="image-hover">
-                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613744751/base/1-2_g91l1n.png" alt="" class="product-image-photo">
-                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613744751/base/1-2_g91l1n.png" alt="" class="product-image-photo">
+                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,h_1024,w_732/v1613826889/colection/DBZ-FIG028-600x600_s8ahbu.jpg" alt="" class="product-image-photo">
+                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,h_1024,w_732/v1613826889/colection/DBZ-FIG028-600x600_s8ahbu.jpg" alt="" class="product-image-photo">
                   </a>
                 </div>
                 <div class="product-info">
@@ -151,12 +152,12 @@
                   </div>
                   <div class="product-name">
                     <a href="#" class="product-item-link">
-                      Legging Cathedral
+                      Songoku
                     </a>
                   </div>
                   <div class="price-box price-final_price">
                                           <span class="price">
-                                             $ 35.00
+                                             vnd 200.000
                                           </span>
                   </div>
                 </div>
@@ -168,8 +169,8 @@
               <div class="product-item">
                 <div class="product-img">
                   <a href="#" class="image-hover">
-                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613744751/base/1-2_g91l1n.png" alt="" class="product-image-photo">
-                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613744751/base/1-2_g91l1n.png" alt="" class="product-image-photo">
+                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,h_1024,w_732/v1613827361/colection/3max_eozd5c.jpg" alt="" class="product-image-photo">
+                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,h_1024,w_732/v1613827361/colection/3max_eozd5c.jpg" alt="" class="product-image-photo">
                   </a>
                 </div>
                 <div class="product-info">
@@ -184,12 +185,12 @@
                   </div>
                   <div class="product-name">
                     <a href="#" class="product-item-link">
-                      Legging Cathedral
+                      Songoku
                     </a>
                   </div>
                   <div class="price-box price-final_price">
                                           <span class="price">
-                                             $ 35.00
+                                             vnd 200.000
                                           </span>
                   </div>
                   <!-- actions -->
@@ -217,8 +218,8 @@
               <div class="product-item">
                 <div class="product-img">
                   <a href="#" class="image-hover">
-                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613744751/base/1-2_g91l1n.png" alt="" class="product-image-photo">
-                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613744751/base/1-2_g91l1n.png" alt="" class="product-image-photo">
+                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,h_1024,w_732/v1613827976/colection/BDA-16219-1_eemd4d.jpg" alt="" class="product-image-photo">
+                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,h_1024,w_732/v1613827976/colection/BDA-16219-1_eemd4d.jpg" alt="" class="product-image-photo">
                   </a>
                 </div>
                 <div class="product-info">
@@ -233,12 +234,12 @@
                   </div>
                   <div class="product-name">
                     <a href="#" class="product-item-link">
-                      Legging Cathedral
+                      Songoku
                     </a>
                   </div>
                   <div class="price-box price-final_price">
                                           <span class="price">
-                                             $ 35.00
+                                             vnd 200.000
                                           </span>
                   </div>
                 </div>
@@ -250,8 +251,8 @@
               <div class="product-item">
                 <div class="product-img">
                   <a href="#" class="image-hover">
-                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613744751/base/1-2_g91l1n.png" alt="" class="product-image-photo">
-                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613744751/base/1-2_g91l1n.png" alt="" class="product-image-photo">
+                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,h_1024,w_732/v1613826899/colection/dragon-ball-super-ichibansho-pvc-figure-son-goku-ultra-instinct-ultimate-variation_cayeq9.jpg" alt="" class="product-image-photo">
+                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,h_1024,w_732/v1613826899/colection/dragon-ball-super-ichibansho-pvc-figure-son-goku-ultra-instinct-ultimate-variation_cayeq9.jpg" alt="" class="product-image-photo">
                   </a>
                 </div>
                 <div class="product-info">
@@ -266,12 +267,12 @@
                   </div>
                   <div class="product-name">
                     <a href="#" class="product-item-link">
-                      Legging Cathedral
+                      Songoku
                     </a>
                   </div>
                   <div class="price-box price-final_price">
                                           <span class="price">
-                                             $ 35.00
+                                             vnd 200.000
                                           </span>
                   </div>
                 </div>
