--- a/app/views/page/container/_my_service.html.erb
+++ b/app/views/page/container/_my_service.html.erb
@@ -1,10 +1,13 @@
+<!--470x705-->
+
+
 <br><br>
 <main id="maincontent" class="page-main page-main-about">
 <div class="container-fluid">
   <div class="row">
     <div class="box-title">
       <h3 class="h3-title small">
-          SẢN PHẨM CỦA CHÚNG TÔI
+          MARVEL
       </h3>
       <div class="title-icon">
         <img alt="" src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588474399/title-icon_xqwppp.png" alt="">
@@ -24,7 +27,7 @@
             </ul>
           </div>
           <div class="images-merber">
-            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_450,w_270/v1613745551/base/detail-product-3_t4e1kd.png" alt="">
+            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,h_705,w_470/v1613828581/marvel/100000001005635122_10204_001_lw0jrs.jpg" alt="">
           </div>
           <div class="title-merber">
             <h3 class="name"><span>ONE PIECE</span></h3>
@@ -41,7 +44,7 @@
             </ul>
           </div>
           <div class="images-merber">
-            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_450,w_270/v1613745551/base/detail-product-3_t4e1kd.png" alt="">
+            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,g_north_west,h_705,w_470/v1613828616/marvel/61qle-3UmgL._AC_SX679__tklpw1.jpg" alt="">
           </div>
           <div class="title-merber">
             <h3 class="name"><span>MARVEL</span></h3>
@@ -58,7 +61,7 @@
             </ul>
           </div>
           <div class="images-merber">
-            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_450,w_270/v1613745551/base/detail-product-3_t4e1kd.png" alt="">
+            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,h_705,w_470/v1613828581/marvel/100000001004237892_10214_nke6ti.jpg" alt="">
           </div>
           <div class="title-merber">
             <h3 class="name"><span>DRAGON BALL</span></h3>
@@ -75,7 +78,7 @@
             </ul>
           </div>
           <div class="images-merber">
-            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_450,w_270/v1613745551/base/detail-product-3_t4e1kd.png" alt="">
+            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,g_north_west,h_705,w_470,x_150,y_214/v1613828579/marvel/61cXSyHZiRL._AC_SX679__c3qcj6.jpg" alt="">
           </div>
           <div class="title-merber">
             <h3 class="name"><span>DRAGON BALL</span></h3>
@@ -92,7 +95,7 @@
             </ul>
           </div>
           <div class="images-merber">
-            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_450,w_270/v1613745551/base/detail-product-3_t4e1kd.png" alt="">
+            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,h_705,w_470/v1613829363/marvel/bef5cca4458e8743822c27c27292f43b_ezregg.jpg" alt="">
           </div>
           <div class="title-merber">
             <h3 class="name"><span>DRAGON BALL</span></h3>
@@ -109,7 +112,7 @@
             </ul>
           </div>
           <div class="images-merber">
-            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_450,w_270/v1613745551/base/detail-product-3_t4e1kd.png" alt="">
+            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,h_705,w_470/v1613828580/marvel/imgrc0072685159_i60pvq.jpg" alt="">
           </div>
           <div class="title-merber">
             <h3 class="name"><span>DRAGON BALL</span></h3>
