--- a/app/views/page/container/_slider1.html.erb
+++ b/app/views/page/container/_slider1.html.erb
@@ -1,3 +1,4 @@
+<!--1170x500-->
 <!-- slider -->
 <section id="engo-2" class="engo-box">
   <div class="main-slider">
@@ -6,7 +7,7 @@
         <div class="r_slider" data-width="1170" data-height="500" data-screen="off" data-fullwidth="off">
           <ul>
             <li class="f_left" data-transition="cube" data-slotamount="7" >
-              <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613740912/base/banner-img1-3_abyhy6.png" alt="" data-bgrepeat="no-repeat" data-bgfit="cover" data-bgposition="center center">
+              <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,h_500,w_1170/v1613829929/header/One-Piece-Background-Wallpapers-37204_snzsj8.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover" data-bgposition="center center">
               <div class="caption lft ltt" data-x="174" data-y="91" data-speed="1500" data-start="1200" data-easing="easeOutBounce" style="font-size: 100px">
                 <p><span class="slider-top big-text">On</span></p>
               </div>
@@ -23,7 +24,7 @@
               </div>
             </li>
             <li class="f_left" data-transition="cube" data-slotamount="7" >
-              <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613740912/base/banner-img1-3_abyhy6.png" alt="" data-bgrepeat="no-repeat" data-bgfit="cover" data-bgposition="center center">
+              <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,g_south,h_500,w_1170/v1613830250/header/dragon-ball-z-e29da4-4k-hd-desktop-wallpaper-for-4k-ultra-hd-tv-e280a2-wide-1_anfe9u.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover" data-bgposition="center center">
               <div class="caption lft ltt" data-x="780" data-y="91" data-speed="1500" data-start="1200" data-easing="easeOutBounce" style="font-size: 100px">
                 <p><span class="slider-top big-text">On</span></p>
               </div>
@@ -40,7 +41,7 @@
               </div>
             </li>
             <li class="f_left" data-transition="cube" data-slotamount="7">
-              <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613740912/base/banner-img1-3_abyhy6.png" alt="" data-bgrepeat="no-repeat" data-bgfit="cover" data-bgposition="center center">
+              <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,g_face,h_500,w_1170/v1613830490/header/wp2654361-marvel-heroes-wallpaper-hd_ggggcc.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover" data-bgposition="center center">
               <div class="caption lft ltt" data-x="174" data-y="91" data-speed="1500" data-start="1200" data-easing="easeOutBounce" style="font-size: 100px">
                 <p><span class="slider-top big-text">On</span></p>
               </div>
