--- a/app/views/page/header/_header.html.erb
+++ b/app/views/page/header/_header.html.erb
@@ -156,7 +156,7 @@
   <div class="header-main">
     <div class="container">
       <a class="logo" title="Magento Commerce" href="#">
-        <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,w_195/v1613794427/base/Screen_Shot_2021-02-20_at_13.10.22_gasrg6.png" alt="logo">
+        <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613822131/base/Screen_Shot_2021-02-20_at_20.55.13_f4piei.png" alt="logo">
       </a>
     </div>
   </div>
