--- a/app/views/page/container/_colection.html.erb
+++ b/app/views/page/container/_colection.html.erb
@@ -2,6 +2,14 @@
 <section id="engo-4" class="engo-box">
   <div class="collection-v1 collection-home ">
 
+    <div class="box-title">
+      <h3 class="h3-title small">
+        SALE
+      </h3>
+      <div class="title-icon">
+        <img alt="" src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588474399/title-icon_xqwppp.png" alt="">
+      </div>
+    </div>
     <div class="container">
       <div class="row">
         <div class="collections-product owl-carousel-play" data-ride="owl-carousel">
@@ -11,7 +19,7 @@
               <div class="col-product blue">
                 <div>
                   <div class="image background-over animation-element engo-PullDown engoPullDown">
-                    <img class="animated" src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613741487/base/collection01_dbjysn.png" alt="collection01">
+                    <img class="animated" src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,h_703,w_370/v1613825155/base/Screen_Shot_2021-02-20_at_21.45.23-removebg-preview_vkpxii.png" alt="collection01">
                   </div>
                   <div class="deal">
                     <div class="deal-name">
@@ -48,7 +56,7 @@
               <div class="col-product yellow">
 
                 <div class="image background-over animation-element engo-PullDown engoPullDown">
-                  <img class="animated" src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613741503/base/collection02_nqm82e.png" alt="collection01">
+                  <img class="animated" src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,g_face:center,h_703,w_370,x_0,y_0/v1613822938/base/Screen_Shot_2021-02-20_at_21.07.27-removebg_g5pwjv.png" alt="collection01">
                 </div>
 
                 <div class="deal">
@@ -84,7 +92,7 @@
               <div class="col-product pink ">
 
                 <div class="image background-over animation-element engo-PullDown engoPullDown">
-                  <img class="animated " src="https://res.cloudinary.com/dtbumlftx/image/upload/v1613741493/base/collection03_g7i2wx.png" alt="collection01">
+                  <img class="animated " src="https://res.cloudinary.com/dtbumlftx/image/upload/c_fill,h_703,w_370/v1613824939/base/Screen_Shot_2021-02-20_at_21.41.45-removebg-preview_uau1sf.png" alt="collection01">
                 </div>
 
                 <div class="deal">
